# Raycer

./: .clang-format  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
includes/: SdlInit.h
src/: main.cpp  presenter.ixx  test.ixx  types.ixx  vec2d.ixx
